--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,5 @@
 {
-    "version": 2,
-    "name": "movies-api-rest-robert",
-    "alias": ["movies-api-rest-robert"],
-    "builds": [
-      {
-        "src": "app.js",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "headers": {
-            "Access-Control-Allow-Origin": "*",
-            "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
-            "Access-Control-Allow-Headers": "X-Requested-With, Content-Type, Accept"
-        },
-        "src": "/(.*)",
-        "dest": "app.js"
-      }
-    ]
-  }
+  "rewrites": [
+    { "source": "/api/(.*)", "destination": "movies-api-rest-robert" }
+  ]
+}
